21-GKE-Gateway-API/08-GKE-Gateway-API-Traffic-Splitting/p2-regional-k8sresources-yaml/c4-03-gateway-app1-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: app1-route
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-regional
    sectionName: https
  rules:
  - backendRefs:
    - name: myapp1-service-v1
      port: 80
      weight: 50 
    - name: myapp1-service-v2
      port: 80
      weight: 50 #usually we send just 5% of the traffic to the new version for testing purpose
